--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -20,7 +20,10 @@ jobs:
       uses: actions/setup-go@v3
       with:
         go-version: 1.20
-      run: go get
-        
+
+    - name: Update dependencies
+      run: |
+        go get .
+
     - name: Test
       run: go test -v ./...
