--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -10,20 +10,49 @@ on:
     branches: [ "main" ]
 
 jobs:
-
   build:
     runs-on: ubuntu-latest
     steps:
-    - uses: actions/checkout@v3
+    - name: Checkout
+      uses: actions/checkout@v3
+      with:
+        fetch-depth: 0
 
     - name: Set up Go
       uses: actions/setup-go@v3
       with:
         go-version: 1.20
-
     - name: Update dependencies
       run: |
         go get .
-
+        go get github.com/caarlos0/env/v8
     - name: Test
-      run: go test -v ./...
+      run: |
+        go test -v ./... -covermode=count -coverprofile=cover.out
+        go tool cover -func=cover.out -o coverage.out
+    # Source: https://github.com/tj-actions/coverage-badge-go
+    - name: Go coverage badge
+      uses: tj-actions/coverage-badge-go@2
+      with:
+        filename: coverage.out
+    - name: Verify Changed files
+      uses: tj-actions/verify-changed-files@v12
+      id: verify-changed-files
+      with:
+        files: README.md
+
+    - name: Commit changes
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
+      run: |
+        git config --local user.email "action@github.com"
+        git config --local user.name "GitHub Action"
+        git add README.md
+        git commit -m "chore: Updated coverage badge."
+
+    - name: Push changes
+      if: steps.verify-changed-files.outputs.files_changed == 'true'
+      uses: ad-m/github-push-action@master
+      with:
+        github_token: ${{ github.token }}
+        branch: ${{ github.head_ref }}
+
